force-app/main/default/objects/Insurance_Claim__c/Insurance_Claim__c.object-meta.xml
<CustomObject>
    <label>Insurance Claim</label>
    <pluralLabel>Insurance Claims</pluralLabel>
    <nameField>
        <label>Claim Number</label>
        <type>AutoNumber</type>
        <displayFormat>CLM-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>An insurance claim filed against a policy. Master-Detail child of Policy Master, so sharing and lifecycle are controlled by the parent policy.</description>
</CustomObject>