force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Amount claimed. Cannot exceed the parent policy's Coverage Limit (enforced by validation rule).</description>
</CustomField>