force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <label>Claim Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date the claim incident was reported. Must fall within the policy coverage period (enforced by validation rule).</description>
</CustomField>