force-app/main/default/objects/Insurance_Claim__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Narrative description of the incident and damages being claimed.</description>
</CustomField>