force-app/main/default/objects/Insurance_Claim__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>MasterDetail</type>
    <referenceTo>Policy_Master__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The policy this claim is filed against. Master-Detail: a claim cannot exist without a policy.</description>
</CustomField>