force-app/main/default/objects/Insurance_Claim__c/validationRules/Claim_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Amount_Positive</fullName>
    <active>true</active>
    <description>A claim must always be filed for a positive amount.</description>
    <errorConditionFormula>Claim_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Claim_Amount__c</errorDisplayField>
    <errorMessage>Claim Amount must be greater than zero.</errorMessage>
</ValidationRule>