force-app/main/default/objects/Insurance_Claim__c/validationRules/Claim_Amount_Within_Coverage_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Amount_Within_Coverage_Limit</fullName>
    <active>true</active>
    <description>Business rule: a single claim can never exceed the coverage limit of its parent policy. Reads the limit through the Master-Detail relationship.</description>
    <errorConditionFormula>Claim_Amount__c &gt; Policy__r.Coverage_Limit__c</errorConditionFormula>
    <errorDisplayField>Claim_Amount__c</errorDisplayField>
    <errorMessage>Claim Amount cannot exceed the policy's Coverage Limit.</errorMessage>
</ValidationRule>